[gd_scene load_steps=13 format=3 uid="uid://c7fjtaxwwqv6a"]

[ext_resource type="Script" path="res://Scripts/CardManager.gd" id="1_m2d8c"]
[ext_resource type="Script" path="res://Scripts/mano.gd" id="2_dr2rs"]
[ext_resource type="PackedScene" uid="uid://bpycidp10ybim" path="res://scene/CardSlot.tscn" id="3_v3x52"]
[ext_resource type="Script" path="res://Scripts/deck.gd" id="4_8fe5c"]
[ext_resource type="Texture2D" uid="uid://cxsxfdwtrlwix" path="res://Assets/Tornioduva's basic card game asset pack/fantasy card/card fantasy back.png" id="4_x7wpd"]
[ext_resource type="Texture2D" uid="uid://dc0or1tao7jtb" path="res://Assets/Tornioduva's basic card game asset pack/fantasy card/fantasy empty playboard.png" id="5_a32ut"]
[ext_resource type="Script" path="res://scene/input_manager.gd" id="6_pwgxj"]
[ext_resource type="Script" path="res://Scripts/manoAvversario.gd" id="7_st2yo"]
[ext_resource type="Texture2D" uid="uid://d0m3hse0uh5we" path="res://Assets/Tornioduva's basic card game asset pack/vampire card/vampire playboard decoration 2.png" id="8_fhbjj"]
[ext_resource type="Script" path="res://scene/battle_manager.gd" id="9_eacpi"]
[ext_resource type="Script" path="res://Scripts/deckAvversario.gd" id="10_afwgh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4l58"]
size = Vector2(145, 202)

[node name="Main" type="Node2D"]

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_m2d8c")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(150, 890)
script = ExtResource("4_8fe5c")

[node name="textbase" type="Sprite2D" parent="Deck"]
position = Vector2(0, 125)
rotation = 3.14159
scale = Vector2(0.07, -0.03)
texture = ExtResource("5_a32ut")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
position = Vector2(-3.05176e-05, 0)
scale = Vector2(0.194, 0.194)
texture = ExtResource("4_x7wpd")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_f4l58")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck/Area2D"]
self_modulate = Color(0.839362, 0.895781, 0, 1)
offset_left = -7.0
offset_top = 110.0
offset_right = 33.0
offset_bottom = 150.0
scale = Vector2(1.3, 1.3)
text = "0"

[node name="SlotMaster" type="Node2D" parent="."]
position = Vector2(960, 426)

[node name="EnemyCardSlot1" parent="SlotMaster" instance=ExtResource("3_v3x52")]
z_index = -1
position = Vector2(-160, -129)

[node name="EnemyCardSlot3" parent="SlotMaster" instance=ExtResource("3_v3x52")]
z_index = -1
position = Vector2(160, -129)

[node name="EnemyCardSlot2" parent="SlotMaster" instance=ExtResource("3_v3x52")]
z_index = -1
position = Vector2(-2, -129)

[node name="CardSlot3" parent="SlotMaster" instance=ExtResource("3_v3x52")]
z_index = -1
position = Vector2(160, 139)

[node name="CardSlot2" parent="SlotMaster" instance=ExtResource("3_v3x52")]
z_index = -1
position = Vector2(0, 139)

[node name="CardSlot" parent="SlotMaster" instance=ExtResource("3_v3x52")]
z_index = -1
position = Vector2(-160, 139)

[node name="Mano" type="Node2D" parent="."]
position = Vector2(0, 1)
script = ExtResource("2_dr2rs")

[node name="ManoAvversario" type="Node2D" parent="."]
position = Vector2(0, 1)
script = ExtResource("7_st2yo")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_pwgxj")

[node name="fine turno" type="Button" parent="."]
offset_left = 318.0
offset_top = 384.0
offset_right = 464.0
offset_bottom = 473.0
text = "finito"
icon = ExtResource("8_fhbjj")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Avversario" type="Node2D" parent="."]

[node name="Deck" type="Node2D" parent="Avversario"]
position = Vector2(1812, 118)
script = ExtResource("10_afwgh")

[node name="textbase" type="Sprite2D" parent="Avversario/Deck"]
position = Vector2(0, 125)
rotation = 3.14159
scale = Vector2(0.07, -0.03)
texture = ExtResource("5_a32ut")

[node name="Sprite2D" type="Sprite2D" parent="Avversario/Deck"]
z_index = -2
position = Vector2(-3.05176e-05, 0)
scale = Vector2(0.194, 0.194)
texture = ExtResource("4_x7wpd")

[node name="Area2D" type="Area2D" parent="Avversario/Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Avversario/Deck/Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_f4l58")

[node name="RichTextLabel" type="RichTextLabel" parent="Avversario/Deck/Area2D"]
self_modulate = Color(0.839362, 0.895781, 0, 1)
offset_left = -7.0
offset_top = 110.0
offset_right = 33.0
offset_bottom = 150.0
scale = Vector2(1.3, 1.3)
text = "0"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("9_eacpi")

[node name="BattleTimer" type="Timer" parent="."]

[connection signal="pressed" from="fine turno" to="BattleManager" method="_on_fine_turno_pressed"]

[editable path="SlotMaster/CardSlot3"]
